--- a/output/css/tim.css
+++ b/output/css/tim.css
@@ -657,6 +657,15 @@ blockquote,.lead {
 	width:400px;
 	padding-left:32px;
 }
+.social-list {
+    display: inline-block;
+    font-size: 66%;
+    color:#00ffcc;
+}
+.social-list li {
+    padding: 0;
+    margin: 0;
+}
 
 /* Home Page
 ----------------------------------------------------------------------------------------------------------------------------- */
@@ -672,7 +681,7 @@ blockquote,.lead {
 	white-space: nowrap;
 }
 #intro h1 {
-	font-size: 25px;
+	font-size: 30px;
 	color: #34495E!important;
 }
 @media (min-width: 768px) {
@@ -695,12 +704,46 @@ blockquote,.lead {
 	font-family: 'Ubuntu Mono';
 }
 #intro h1 .t1 {}
+#slideover .bracket,
 #intro h1 .bracket {
 	color: #16A085;
 }
 #intro h1 .t2 {
 	color: #336E7B;
 }
+#intro #definition {
+    position: absolute;
+	font-family: 'Ubuntu Mono';
+    right:0%;
+    margin-right:-6%;
+    margin-top:-5%;
+	font-size: 15px;
+    line-height: 0.8;
+}
+@media (min-width: 768px) {
+	#intro #definition {
+        margin-right:0%;
+		font-size: 24px;
+	}
+}
+@media (min-width: 992px) {
+	#intro #definition {
+		font-size: 32px;
+	}
+}
+@media (min-width: 1200px) {
+	#intro #definition {
+		font-size: 40px;
+	}
+}
+#intro #definition li:nth-child(1) { color: #4c8f9f; }
+#intro #definition li:nth-child(2) { color: #40808e; }
+#intro #definition li:nth-child(3) { color: #336E7B; }
+
+#intro #definition li:nth-child(1) { animation: fadeIn 1024ms linear 1000ms 1 both; }
+#intro #definition li:nth-child(2) { animation: fadeIn 1024ms linear 1500ms 1 both; }
+#intro #definition li:nth-child(3) { animation: fadeIn 1024ms linear 2000ms 1 both; }
+
 
 /* Epigraph Page
 ----------------------------------------------------------------------------------------------------------------------------- */
@@ -1482,6 +1525,10 @@ main section.bringOut {
 @keyframes flip {
 	0%   {transform: rotate(  0deg);}
 	100% {transform: rotate(359deg);}
+}
+@keyframes fadeIn {
+	0%   {opacity:0;}
+	100% {opacity:1;}
 }
 @keyframes updn {
 	0%   {transform: translateY(0px) rotate(0deg);}
