--- a/output/css/tim.css
+++ b/output/css/tim.css
@@ -744,6 +744,44 @@ blockquote,.lead {
 #intro #definition li:nth-child(2) { animation: fadeIn 1024ms linear 1500ms 1 both; }
 #intro #definition li:nth-child(3) { animation: fadeIn 1024ms linear 2000ms 1 both; }
 
+#verb-container {
+    position: relative;
+}
+#verb-list {
+    position: absolute;
+    font-size: 10px;
+    top:0%;
+    width:100%;
+    height:100%;
+}
+@media (min-width: 768px) {
+	#verb-list {
+        margin-right:0%;
+		font-size: 19px;
+	}
+}
+@media (min-width: 992px) {
+	#verb-list {
+		font-size: 26px;
+	}
+}
+@media (min-width: 1200px) {
+	#verb-list {
+		font-size: 32px;
+	}
+}
+#verb-list .label {
+    position: relative;
+    float: left;
+    margin: 2px;
+    opacity: 0;
+    transition: all 1s ease;
+    top:-20%;
+}
+#verb-list:hover .label {
+    opacity: 1;
+    top:0%;
+}
 
 /* Epigraph Page
 ----------------------------------------------------------------------------------------------------------------------------- */
