--- a/source/templates/ruminations.html
+++ b/source/templates/ruminations.html
@@ -4,7 +4,7 @@
 			<div class="col-sm-12">
 				<div class="row">
 					<div class="col-sm-12">
-						<header><h1><em>Ruminations</em><small></small></h1></header>
+						<header><h1><em>Ruminations</em> <small>&mdash; the things that fascinate and occupy my mind</small></h1></header>
 						<hr>
 					</div>
 				</div>
